# SeniorProject

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cameraworker.cpp  cameraworker.h  discoveryworker.cpp  discoveryworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ndi_receiver.cpp  ndi_receiver.h  ndi_sender.cpp  ndi_sender.h  receiverworker.cpp  receiverworker.h  senderworker.cpp  senderworker.h  style.qss
